[package]
name = "work_bot_1"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0", features = ["blocking", "json"] }
serde_json = "1"
jsonwebtoken = "9"
dotenv = "0"
chrono = { version = "0", features = ["serde"] } 
comfy-table = "7"

